# archive-path

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  test_writer.py  tox.ini
.github/workflows/: tests.yml
archive_path/: __init__.py  common.py  tar_path.py  zip_path.py
tests/: test_basic.py  test_glob.py
