[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "archive_path"
dist-name = "archive-path"
author = "Chris Sewell"
author-email = "executablebooks@gmail.com"
description-file = "README.md"
home-page = "https://github.com/aiidateam/archive-path"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = "archive zip tar pathlib"

requires-python=">=3.6"

[tool.flit.metadata.requires-extra]
test = [
    "pytest~=6.0",
    "coverage",
    "pytest-cov",
]
dev = ["pre-commit"]

[tool.flit.sdist]
include = ["LICENSE", "README.md", "CHANGELOG.md"]
exclude = [".github/", "tests/"]

[tool.isort]
# Force imports to be sorted by module, independent of import type
force_sort_within_sections = true
# Group first party and local folder imports together
no_lines_before = ["LOCALFOLDER"]

# Configure isort to work without access to site-packages
known_first_party = ["archive_path", "tests"]

# Settings for Black compatibility
profile = "black"

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
